# elegoo-link

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  private_config.h.in  vcpkg.json  version.h.in
.github/: copilot-instructions.md
cmake/: elegoolink-config.cmake.in
examples/: CMakeLists.txt  README.md  printer_connection_test.cpp
include/: config.h  elegoo_export.h  elegoo_link.h  type.h
include/events/: event_system.h
include/types/: base.h  biz.h  cloud.h  common.h  event.h  printer.h
include/types/internal/: internal.h  json_serializer.h  message.h  method_names.h
resources/: version.rc.in  version_dll.rc.in
src/: elegoo_link.cpp  static_web_server.cpp  static_web_server.h
src/cloud/: app_utils.h  cloud_service.cpp  cloud_service.h
src/cloud/adapters/: elegoo_fdm_cc2_message_adapter.cpp  elegoo_fdm_cc2_message_adapter.h  message_adapter.cpp  message_adapter.h
src/cloud/protocols/: http_client.cpp  http_client.h  mqtt_client.cpp  mqtt_client.h  rtm_client.cpp  rtm_client.h
src/cloud/services/: http_service.cpp  http_service.h  mqtt_service.cpp  mqtt_service.h  rtm_service.cpp  rtm_service.h
src/events/: event_system.cpp
src/lan/: lan_service.cpp  lan_service.h  lan_service_impl.h
src/lan/adapters/: elegoo_cc2_adapters.h  elegoo_cc_adapters.h  generic_moonraker_adapters.h
src/lan/adapters/elegoo_fdm_cc/: elegoo_fdm_cc_discovery_strategy.cpp  elegoo_fdm_cc_http_transfer.cpp  elegoo_fdm_cc_message_adapter.cpp  elegoo_fdm_cc_protocol.cpp
src/lan/adapters/elegoo_fdm_cc2/: elegoo_fdm_cc2_discovery_strategy.cpp  elegoo_fdm_cc2_http_transfer.cpp  elegoo_fdm_cc2_message_adapter.cpp  elegoo_fdm_cc2_protocol.cpp
src/lan/adapters/generic_moonraker/: generic_moonraker_discovery_strategy.cpp  generic_moonraker_http_transfer.cpp  generic_moonraker_message_adapter.cpp  generic_moonraker_protocol.cpp
src/lan/core/: base_printer.cpp  base_printer.h  elegoo_fdm_cc2_printer.cpp  elegoo_fdm_cc2_printer.h  elegoo_fdm_cc_printer.cpp  elegoo_fdm_cc_printer.h  generic_moonraker_printer.cpp  generic_moonraker_printer.h  printer.h  printer_factory.cpp  printer_factory.h  printer_manager.cpp  printer_manager.h
src/lan/discovery/: printer_discovery.cpp  printer_discovery.h
src/lan/protocols/: connection_manager_base.cpp  connection_manager_base.h  error_handler.cpp  error_handler.h  file_transfer.cpp  file_transfer.h  message_adapter.cpp  message_adapter.h  mqtt_protocol.cpp  mqtt_protocol.h  protocol_interface.h  websocket_base.cpp  websocket_base.h  websocket_protocol.cpp  websocket_protocol.h
src/utils/: console_utils.cpp  console_utils.h  json_utils.h  logger.cpp  logger.h  process_mutex.cpp  process_mutex.h  thread_pool.h  utils.cpp  utils.h
